--- a/04_Regression_Techniques.ipynb
+++ b/04_Regression_Techniques.ipynb
@@ -480,293 +480,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CRIM</th>\n",
-       "      <th>ZN</th>\n",
-       "      <th>INDUS</th>\n",
-       "      <th>CHAS</th>\n",
-       "      <th>NOX</th>\n",
-       "      <th>RM</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>DIS</th>\n",
-       "      <th>RAD</th>\n",
-       "      <th>TAX</th>\n",
-       "      <th>PTRATIO</th>\n",
-       "      <th>B</th>\n",
-       "      <th>LSTAT</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CRIM</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.199458</td>\n",
-       "      <td>0.404471</td>\n",
-       "      <td>-0.055295</td>\n",
-       "      <td>0.417521</td>\n",
-       "      <td>-0.219940</td>\n",
-       "      <td>0.350784</td>\n",
-       "      <td>-0.377904</td>\n",
-       "      <td>0.622029</td>\n",
-       "      <td>0.579564</td>\n",
-       "      <td>0.288250</td>\n",
-       "      <td>-0.377365</td>\n",
-       "      <td>0.452220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZN</th>\n",
-       "      <td>-0.199458</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.533828</td>\n",
-       "      <td>-0.042697</td>\n",
-       "      <td>-0.516604</td>\n",
-       "      <td>0.311991</td>\n",
-       "      <td>-0.569537</td>\n",
-       "      <td>0.664408</td>\n",
-       "      <td>-0.311948</td>\n",
-       "      <td>-0.314563</td>\n",
-       "      <td>-0.391679</td>\n",
-       "      <td>0.175520</td>\n",
-       "      <td>-0.412995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>INDUS</th>\n",
-       "      <td>0.404471</td>\n",
-       "      <td>-0.533828</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.062938</td>\n",
-       "      <td>0.763651</td>\n",
-       "      <td>-0.391676</td>\n",
-       "      <td>0.644779</td>\n",
-       "      <td>-0.708027</td>\n",
-       "      <td>0.595129</td>\n",
-       "      <td>0.720760</td>\n",
-       "      <td>0.383248</td>\n",
-       "      <td>-0.356977</td>\n",
-       "      <td>0.603800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CHAS</th>\n",
-       "      <td>-0.055295</td>\n",
-       "      <td>-0.042697</td>\n",
-       "      <td>0.062938</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.091203</td>\n",
-       "      <td>0.091251</td>\n",
-       "      <td>0.086518</td>\n",
-       "      <td>-0.099176</td>\n",
-       "      <td>-0.007368</td>\n",
-       "      <td>-0.035587</td>\n",
-       "      <td>-0.121515</td>\n",
-       "      <td>0.048788</td>\n",
-       "      <td>-0.053929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NOX</th>\n",
-       "      <td>0.417521</td>\n",
-       "      <td>-0.516604</td>\n",
-       "      <td>0.763651</td>\n",
-       "      <td>0.091203</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.302188</td>\n",
-       "      <td>0.731470</td>\n",
-       "      <td>-0.769230</td>\n",
-       "      <td>0.611441</td>\n",
-       "      <td>0.668023</td>\n",
-       "      <td>0.188933</td>\n",
-       "      <td>-0.380051</td>\n",
-       "      <td>0.590879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RM</th>\n",
-       "      <td>-0.219940</td>\n",
-       "      <td>0.311991</td>\n",
-       "      <td>-0.391676</td>\n",
-       "      <td>0.091251</td>\n",
-       "      <td>-0.302188</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.240265</td>\n",
-       "      <td>0.205246</td>\n",
-       "      <td>-0.209847</td>\n",
-       "      <td>-0.292048</td>\n",
-       "      <td>-0.355501</td>\n",
-       "      <td>0.128069</td>\n",
-       "      <td>-0.613808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AGE</th>\n",
-       "      <td>0.350784</td>\n",
-       "      <td>-0.569537</td>\n",
-       "      <td>0.644779</td>\n",
-       "      <td>0.086518</td>\n",
-       "      <td>0.731470</td>\n",
-       "      <td>-0.240265</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.747881</td>\n",
-       "      <td>0.456022</td>\n",
-       "      <td>0.506456</td>\n",
-       "      <td>0.261515</td>\n",
-       "      <td>-0.273534</td>\n",
-       "      <td>0.602339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DIS</th>\n",
-       "      <td>-0.377904</td>\n",
-       "      <td>0.664408</td>\n",
-       "      <td>-0.708027</td>\n",
-       "      <td>-0.099176</td>\n",
-       "      <td>-0.769230</td>\n",
-       "      <td>0.205246</td>\n",
-       "      <td>-0.747881</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.494588</td>\n",
-       "      <td>-0.534432</td>\n",
-       "      <td>-0.232471</td>\n",
-       "      <td>0.291512</td>\n",
-       "      <td>-0.496996</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RAD</th>\n",
-       "      <td>0.622029</td>\n",
-       "      <td>-0.311948</td>\n",
-       "      <td>0.595129</td>\n",
-       "      <td>-0.007368</td>\n",
-       "      <td>0.611441</td>\n",
-       "      <td>-0.209847</td>\n",
-       "      <td>0.456022</td>\n",
-       "      <td>-0.494588</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.910228</td>\n",
-       "      <td>0.464741</td>\n",
-       "      <td>-0.444413</td>\n",
-       "      <td>0.488676</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TAX</th>\n",
-       "      <td>0.579564</td>\n",
-       "      <td>-0.314563</td>\n",
-       "      <td>0.720760</td>\n",
-       "      <td>-0.035587</td>\n",
-       "      <td>0.668023</td>\n",
-       "      <td>-0.292048</td>\n",
-       "      <td>0.506456</td>\n",
-       "      <td>-0.534432</td>\n",
-       "      <td>0.910228</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.460853</td>\n",
-       "      <td>-0.441808</td>\n",
-       "      <td>0.543993</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PTRATIO</th>\n",
-       "      <td>0.288250</td>\n",
-       "      <td>-0.391679</td>\n",
-       "      <td>0.383248</td>\n",
-       "      <td>-0.121515</td>\n",
-       "      <td>0.188933</td>\n",
-       "      <td>-0.355501</td>\n",
-       "      <td>0.261515</td>\n",
-       "      <td>-0.232471</td>\n",
-       "      <td>0.464741</td>\n",
-       "      <td>0.460853</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.177383</td>\n",
-       "      <td>0.374044</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>B</th>\n",
-       "      <td>-0.377365</td>\n",
-       "      <td>0.175520</td>\n",
-       "      <td>-0.356977</td>\n",
-       "      <td>0.048788</td>\n",
-       "      <td>-0.380051</td>\n",
-       "      <td>0.128069</td>\n",
-       "      <td>-0.273534</td>\n",
-       "      <td>0.291512</td>\n",
-       "      <td>-0.444413</td>\n",
-       "      <td>-0.441808</td>\n",
-       "      <td>-0.177383</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.366087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LSTAT</th>\n",
-       "      <td>0.452220</td>\n",
-       "      <td>-0.412995</td>\n",
-       "      <td>0.603800</td>\n",
-       "      <td>-0.053929</td>\n",
-       "      <td>0.590879</td>\n",
-       "      <td>-0.613808</td>\n",
-       "      <td>0.602339</td>\n",
-       "      <td>-0.496996</td>\n",
-       "      <td>0.488676</td>\n",
-       "      <td>0.543993</td>\n",
-       "      <td>0.374044</td>\n",
-       "      <td>-0.366087</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             CRIM        ZN     INDUS      CHAS       NOX        RM       AGE  \\\n",
-       "CRIM     1.000000 -0.199458  0.404471 -0.055295  0.417521 -0.219940  0.350784   \n",
-       "ZN      -0.199458  1.000000 -0.533828 -0.042697 -0.516604  0.311991 -0.569537   \n",
-       "INDUS    0.404471 -0.533828  1.000000  0.062938  0.763651 -0.391676  0.644779   \n",
-       "CHAS    -0.055295 -0.042697  0.062938  1.000000  0.091203  0.091251  0.086518   \n",
-       "NOX      0.417521 -0.516604  0.763651  0.091203  1.000000 -0.302188  0.731470   \n",
-       "RM      -0.219940  0.311991 -0.391676  0.091251 -0.302188  1.000000 -0.240265   \n",
-       "AGE      0.350784 -0.569537  0.644779  0.086518  0.731470 -0.240265  1.000000   \n",
-       "DIS     -0.377904  0.664408 -0.708027 -0.099176 -0.769230  0.205246 -0.747881   \n",
-       "RAD      0.622029 -0.311948  0.595129 -0.007368  0.611441 -0.209847  0.456022   \n",
-       "TAX      0.579564 -0.314563  0.720760 -0.035587  0.668023 -0.292048  0.506456   \n",
-       "PTRATIO  0.288250 -0.391679  0.383248 -0.121515  0.188933 -0.355501  0.261515   \n",
-       "B       -0.377365  0.175520 -0.356977  0.048788 -0.380051  0.128069 -0.273534   \n",
-       "LSTAT    0.452220 -0.412995  0.603800 -0.053929  0.590879 -0.613808  0.602339   \n",
-       "\n",
-       "              DIS       RAD       TAX   PTRATIO         B     LSTAT  \n",
-       "CRIM    -0.377904  0.622029  0.579564  0.288250 -0.377365  0.452220  \n",
-       "ZN       0.664408 -0.311948 -0.314563 -0.391679  0.175520 -0.412995  \n",
-       "INDUS   -0.708027  0.595129  0.720760  0.383248 -0.356977  0.603800  \n",
-       "CHAS    -0.099176 -0.007368 -0.035587 -0.121515  0.048788 -0.053929  \n",
-       "NOX     -0.769230  0.611441  0.668023  0.188933 -0.380051  0.590879  \n",
-       "RM       0.205246 -0.209847 -0.292048 -0.355501  0.128069 -0.613808  \n",
-       "AGE     -0.747881  0.456022  0.506456  0.261515 -0.273534  0.602339  \n",
-       "DIS      1.000000 -0.494588 -0.534432 -0.232471  0.291512 -0.496996  \n",
-       "RAD     -0.494588  1.000000  0.910228  0.464741 -0.444413  0.488676  \n",
-       "TAX     -0.534432  0.910228  1.000000  0.460853 -0.441808  0.543993  \n",
-       "PTRATIO -0.232471  0.464741  0.460853  1.000000 -0.177383  0.374044  \n",
-       "B        0.291512 -0.444413 -0.441808 -0.177383  1.000000 -0.366087  \n",
-       "LSTAT   -0.496996  0.488676  0.543993  0.374044 -0.366087  1.000000  "
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Don\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#ix-indexer-is-deprecated\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'sort_value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-59-c69b0bf02ba5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mcorr_with_target\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpearson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# attributes sorted from the most predictive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mpredictivity\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcorr_with_target\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   3079\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3080\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3081\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3082\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3083\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'sort_value'"
+     ]
     }
    ],
    "source": [
@@ -777,7 +518,14 @@
     "\n",
     "# Create a heatmap using sns.linearmodels.corrplot(), or sns.heatmap().  If you use .heatmap(), you'll need to \n",
     "# create a correlation matrix by using np.corrcoef() on your data.  \n",
-    "df.corr(method='pearson')"
+    "df.corr(method='pearson')\n",
+    "\n",
+    "pearson = df.corr(method='pearson')\n",
+    "# assume target attr is the last, then remove corr with itself\n",
+    "corr_with_target = pearson.ix[-1][:-1]\n",
+    "# attributes sorted from the most predictive\n",
+    "predictivity = corr_with_target.sort(ascending=False)\n",
+    "\n"
    ]
   },
   {
