--- a/04_Regression_Techniques.ipynb
+++ b/04_Regression_Techniques.ipynb
@@ -480,34 +480,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Don\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: DeprecationWarning: \n",
-      ".ix is deprecated. Please use\n",
-      ".loc for label based indexing or\n",
-      ".iloc for positional indexing\n",
-      "\n",
-      "See the documentation here:\n",
-      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#ix-indexer-is-deprecated\n",
-      "  if sys.path[0] == '':\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'sort_value'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-59-c69b0bf02ba5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mcorr_with_target\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpearson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# attributes sorted from the most predictive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mpredictivity\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcorr_with_target\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   3079\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3080\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3081\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3082\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3083\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'sort_value'"
-     ]
+     "data": {
+      "text/plain": [
+       "RM        -0.613808\n",
+       "INDUS      0.603800\n",
+       "AGE        0.602339\n",
+       "NOX        0.590879\n",
+       "TAX        0.543993\n",
+       "DIS       -0.496996\n",
+       "RAD        0.488676\n",
+       "CRIM       0.452220\n",
+       "ZN        -0.412995\n",
+       "PTRATIO    0.374044\n",
+       "B         -0.366087\n",
+       "CHAS      -0.053929\n",
+       "Name: LSTAT, dtype: float64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -522,10 +518,214 @@
     "\n",
     "pearson = df.corr(method='pearson')\n",
     "# assume target attr is the last, then remove corr with itself\n",
-    "corr_with_target = pearson.ix[-1][:-1]\n",
+    "corr_with_target = pearson.iloc[-1][:-1]\n",
     "# attributes sorted from the most predictive\n",
-    "predictivity = corr_with_target.sort(ascending=False)\n",
-    "\n"
+    "predictivity = corr_with_target.sort_values(ascending=False)\n",
+    "\n",
+    "corr_with_target[abs(corr_with_target).argsort()[::-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attribute pair</th>\n",
+       "      <th>correlation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>(RAD, TAX)</td>\n",
+       "      <td>0.910228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>(DIS, NOX)</td>\n",
+       "      <td>-0.769230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(INDUS, NOX)</td>\n",
+       "      <td>0.763651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>(AGE, DIS)</td>\n",
+       "      <td>-0.747881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>(AGE, NOX)</td>\n",
+       "      <td>0.731470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>(INDUS, TAX)</td>\n",
+       "      <td>0.720760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>(DIS, INDUS)</td>\n",
+       "      <td>-0.708027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(NOX, TAX)</td>\n",
+       "      <td>0.668023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(DIS, ZN)</td>\n",
+       "      <td>0.664408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>(AGE, INDUS)</td>\n",
+       "      <td>0.644779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>(CRIM, RAD)</td>\n",
+       "      <td>0.622029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>(NOX, RAD)</td>\n",
+       "      <td>0.611441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(INDUS, RAD)</td>\n",
+       "      <td>0.595129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>(CRIM, TAX)</td>\n",
+       "      <td>0.579564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(AGE, ZN)</td>\n",
+       "      <td>-0.569537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>(DIS, TAX)</td>\n",
+       "      <td>-0.534432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(INDUS, ZN)</td>\n",
+       "      <td>-0.533828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(NOX, ZN)</td>\n",
+       "      <td>-0.516604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(AGE, TAX)</td>\n",
+       "      <td>0.506456</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   attribute pair  correlation\n",
+       "14     (RAD, TAX)     0.910228\n",
+       "15     (DIS, NOX)    -0.769230\n",
+       "2    (INDUS, NOX)     0.763651\n",
+       "16     (AGE, DIS)    -0.747881\n",
+       "17     (AGE, NOX)     0.731470\n",
+       "10   (INDUS, TAX)     0.720760\n",
+       "11   (DIS, INDUS)    -0.708027\n",
+       "6      (NOX, TAX)     0.668023\n",
+       "3       (DIS, ZN)     0.664408\n",
+       "18   (AGE, INDUS)     0.644779\n",
+       "7     (CRIM, RAD)     0.622029\n",
+       "9      (NOX, RAD)     0.611441\n",
+       "8    (INDUS, RAD)     0.595129\n",
+       "13    (CRIM, TAX)     0.579564\n",
+       "5       (AGE, ZN)    -0.569537\n",
+       "12     (DIS, TAX)    -0.534432\n",
+       "1     (INDUS, ZN)    -0.533828\n",
+       "0       (NOX, ZN)    -0.516604\n",
+       "4      (AGE, TAX)     0.506456"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attrs = pearson.iloc[:-1,:-1] # all except target\n",
+    "# only important correlations and not auto-correlations\n",
+    "threshold = 0.5\n",
+    "# {('LSTAT', 'TAX'): 0.543993, ('INDUS', 'RAD'): 0.595129, ...\n",
+    "important_corrs = (attrs[abs(attrs) > threshold][attrs != 1.0]) \\\n",
+    "    .unstack().dropna().to_dict()\n",
+    "#     attribute pair  correlation\n",
+    "# 0     (AGE, INDUS)     0.644779\n",
+    "# 1     (INDUS, RAD)     0.595129\n",
+    "# ...\n",
+    "unique_important_corrs = pd.DataFrame(\n",
+    "    list(set([(tuple(sorted(key)), important_corrs[key]) \\\n",
+    "    for key in important_corrs])), columns=['attribute pair', 'correlation'])\n",
+    "# sorted by absolute value\n",
+    "unique_important_corrs = unique_important_corrs.iloc[\n",
+    "    abs(unique_important_corrs['correlation']).argsort()[::-1]]\n",
+    "\n",
+    "unique_important_corrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'corrplot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-70-e56a1bb8b7e3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mseaborn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinearmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcorrplot\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcorrplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# compute and plot the pair-wise correlations\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# save to file, remove the big white borders\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msavefig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'attribute_correlations.png'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtight_layout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'corrplot'"
+     ]
+    }
+   ],
+   "source": [
+    "from seaborn.linearmodels import corrplot\n",
+    "sns.corrplot(df) # compute and plot the pair-wise correlations\n",
+    "# save to file, remove the big white borders\n",
+    "plt.savefig('attribute_correlations.png', tight_layout=True)"
    ]
   },
   {
@@ -580,13 +780,12 @@
     "from sklearn.linear_model import LinearRegression\n",
     "#neeed to import coross val\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
-    "#NEED TO FIUGRE OUT HOW TO DO LIN REGRESSION, REQUESTING FELP\n",
+    "#NEED TO FIUGRE OUT HOW TO DO LIN REGRESSION, REQUESTING help\n",
     "linear = LinearRegression()\n",
-    "\n",
     "\n",
     "k_fold = KFold(n_splits=5, shuffle=True)\n",
     "\n",
-    "# Getting the cross validation scores of linear regression model\n",
+    "#cross vales of linear regression, need to pring to make sure\n",
     "crossval_multiple = cross_val_score(linear,df, targets, cv=k_fold, scoring='r2')\n",
     "\n",
     "#PRINT TO MAKE SURE IT MAKE SINCE\n",
