--- a/07_Ensemble_Methods.ipynb
+++ b/07_Ensemble_Methods.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "[768 rows x 8 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,6 +976,7 @@
     "# Import the dataset, clean it, and then fit and a RandomForestClassifier \n",
     "# and make predictions on it below!\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "pima_df = pd.read_csv('datasets/pima_indians_diabetes.csv')\n",
     "\n",
@@ -991,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1000,7 @@
      "output_type": "stream",
      "text": [
       "Out-of-bag score estimate: 0.76\n",
-      "Mean accuracy score: 0.724\n"
+      "Mean accuracy score: 0.818\n"
      ]
     }
    ],
@@ -1018,6 +1019,32 @@
     "accuracy = accuracy_score(y_test, predicted)\n",
     "print(f'Out-of-bag score estimate: {forest.oob_score_:.3}')\n",
     "print(f'Mean accuracy score: {accuracy:.3}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ConfusionMatrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-96-6ff7f7a9e231>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mconfusion_matrix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mConfusionMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Confusion matrix:\\n%s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ConfusionMatrix' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import seaborn as sns\n",
+    "#confusion matrix\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix = ConfusionMatrix(y_true, y_pred)\n",
+    "print(\"Confusion matrix:\\n%s\" % confusion_matrix)"
    ]
   },
   {
@@ -1086,34 +1113,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'GradientBoostingClassifier' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-76-476d1a40cd72>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mnum_trees\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mkfold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_selection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGradientBoostingClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_estimators\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_trees\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_selection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkfold\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'GradientBoostingClassifier' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.760338345865\n"
      ]
     }
    ],
    "source": [
     "# Write your code below!\n",
     "from sklearn import model_selection\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "seed = 10\n",
     "num_trees = 100\n",
     "X,Y = pima_df, outcome\n",
-    "seed = 7\n",
+    "seed = 10\n",
     "num_trees = 100\n",
     "kfold = model_selection.KFold(n_splits=10, random_state=seed)\n",
     "model = GradientBoostingClassifier(n_estimators=num_trees, random_state=seed)\n",
     "results = model_selection.cross_val_score(model, X, Y, cv=kfold)\n",
+    "\n",
     "print(results.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#confusion matrix\n",
+    "pima_df.columns.values\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = pd.DataFrame(confusion_matrix(y_test, predicted), columns=iris.target_names, index=iris.target_names)\n",
+    "sns.heatmap(cm, annot=True)"
    ]
   }
  ],
